# ecom-v3

./: README.md  pyproject.toml
apps/cart/: cart.py  forms.py  urls.py  views.py
apps/orders/: admin.py  forms.py  models.py  tasks.py  views.py
apps/shop/: admin.py  models.py  urls.py  views.py
apps/shop/migrations/: 0001_initial.py
core/: celery.py  settings.py  urls.py
templates/cart/: detail.html
templates/orders/order/: create.html
templates/shop/: base.html
templates/shop/product/: detail.html  list.html
