[tool.poetry]
name = "ecom-v3"
version = "0.1.0"
description = ""
authors = ["kofi-teddy <agudogot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
django-decouple = "^2.1"
dj-database-url = "^0.5.0"
Pillow = "^9.0.1"
celery = "^5.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
